@@ -2,7 +2,7 @@ package com.edusphere.services;
 
 import com.edusphere.entities.IncidentEntity;
 import com.edusphere.exceptions.ChildNotFoundException;
-import com.edusphere.exceptions.IncidentNotException;
+import com.edusphere.exceptions.IncidentNotFoundException;
 import com.edusphere.mappers.IncidentMapper;
 import com.edusphere.repositories.ChildRepository;
 import com.edusphere.repositories.IncidentRepository;
@@ -11,7 +11,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class IncidentService {
@@ -31,14 +30,14 @@ public class IncidentService {
         List<IncidentEntity> incidents = incidentRepository.findAllByChildParentOrganizationId(organizationId);
         return incidents.stream()
                 .map(incidentMapper::toVO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public IncidentVO getIncidentById(Integer id, Integer organizationId) {
         return incidentRepository.findByIdAndChildParentOrganizationId(id, organizationId)
                 .map(incidentMapper::toVO)
-                .orElseThrow(() -> new IncidentNotException(id));
+                .orElseThrow(() -> new IncidentNotFoundException(id));
     }
 
     @Transactional
@@ -58,7 +57,7 @@ public class IncidentService {
                             .orElseThrow(() -> new ChildNotFoundException(incidentVO.getChildId())));
                     return incidentEntity;
                 })
-                .orElseThrow(() -> new IncidentNotException(id));
+                .orElseThrow(() -> new IncidentNotFoundException(id));
         incidentRepository.save(updatedEntity);
         return incidentMapper.toVO(updatedEntity);
     }
@@ -69,6 +68,8 @@ public class IncidentService {
         if (incidentRepository.existsByIdAndChildParentOrganizationId(id, organizationId)) {
 
             incidentRepository.deleteByIdAndChildParentOrganizationId(id, organizationId);
+        }else{
+            throw new IncidentNotFoundException(id);
         }
     }
 
